--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,40 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
-
-    <LinearLayout
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <ProgressBar
-            android:id="@+id/progress_bar_popular"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:visibility="gone"/>
-
-        <TextView
-            android:id="@+id/txt_error_popular"
+        android:layout_height="500dp"
+        android:background="#000730"
+        tools:context=".ui.home.HomeFragment"
+    >
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Check your connection"
-            android:visibility="gone"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+        >
+            <ProgressBar
+                android:id="@+id/progress_bar_popular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_movie_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#000730"
-            android:paddingTop="10dp"
-            />
+            <TextView
+                android:id="@+id/txt_error_popular"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Check your connection"
+                android:visibility="gone"/>
 
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:textSize="25sp"
+                android:padding="10dp"
+                android:text="Upcoming movies"
+                />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_movie_list1"
+                android:layout_width="match_parent"
+                android:layout_height="210dp"
+                android:background="#000730"
+                android:padding="10dp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:textSize="25sp"
+                android:padding="10dp"
+                android:text="Popular movies"
+                />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_movie_list2"
+                android:layout_width="match_parent"
+                android:layout_height="210dp"
+                android:background="#000730"
+                android:padding="10dp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:textSize="25sp"
+                android:padding="10dp"
+                android:text="Top rated movies"
+                />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_movie_list3"
+                android:layout_width="match_parent"
+                android:layout_height="210dp"
+                android:background="#000730"
+                android:padding="10dp"
+                android:layout_marginBottom="50dp"
+                />
+        </LinearLayout>
+    </ScrollView>
