--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -4,7 +4,7 @@
     android:id="@+id/card_view"
     android:layout_width="130dp"
     android:layout_height="200dp"
-    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:foreground="?selectableItemBackground"
     android:focusable="true"
     android:clickable="true">
